UI Fix: 1px gap between nav buttons and bottom border line

--- a/css/index.css
+++ b/css/index.css
@@ -138,7 +138,7 @@ nav a {
 	color: #ffffff;
 	line-height: normal!important;
 	text-decoration: none!important;
-	padding: 5px 10px 5px 10px;
+	padding: 2px 10px 2px 10px!important;
 }
 
 nav a:hover {
